# simple_acc

./: README.md  compose.yaml  develop.compose.yaml
backend/: Dockerfile  flake.nix  pyproject.toml
backend/alembic_async/versions/: 282819f073d6_add_name_indexes.py  2911fee4324e_add_unique_name_constrants.py  2952afe0d642_init_db.py  2f76bf7ce281_add_accumulator_lifespan_field.py  3dad873f656a_init_db.py
backend/app/: config.py  crud.py  db.py  deps.py  main.py  model_data.py  model_db.py
backend/app/routes/: accums.py  batteries.py  devices.py
frontend/: flake.nix  main.py
