[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi-cli>=0.0.13",
    "fastapi[asyncio]>=0.119.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]
